--- a/headphones/1-styles.css
+++ b/headphones/1-styles.css
@@ -1,3 +1,68 @@
+body {
+    background-image: url(headphones\ backgd.jpg);
+    background-repeat: no-repeat;
+    width: 800px;
+    height: 800px;
+  }
+  hearder {
+    position: relative;
+    height: 100px;
+  }
+  .logo-container {
+    position: relative;
+    display: inline-block;
+  }
+  .logo {
+    height: 80px;
+  }
+  .logo-text {
+    position: absolute;
+    top: 30px;
+    margin-left: 200px; /* Space between icon and text */
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Poppins' sans-serif;
+    color: black;
+  }
+  .icon {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    left: 140px;
+    top: 15px;
+  }
+  .outer-border {
+    position:absolute;
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+    background-color: white;
+  }
+  .middle-border {
+    position: absolute;
+    width: 80%;
+    height: 80%;
+    top: 10%;
+    left: 10%;
+    clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+    background-color: orangered;
+  }
+.center-shape {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  top: 15px;
+  left: 25%;
+  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+  background-color: white;
+}
+/* Responsive Design for Mobile (max width 480px) */
+@media (max-width: 480px) {}
+  body {
+      width: 100%;
+      height: auto;
+      background-size: cover;
+  }
 nav ul {
     position: absolute;
     list-style: none;
