--- a/headphones/1-styles.css
+++ b/headphones/1-styles.css
@@ -1,135 +1,83 @@
-body {
-    background-image: url(headphones\ backgd.jpg);
-    background-repeat: no-repeat;
-    width: 800px;
-    height: 800px;
-  }
-  hearder {
-    position: relative;
-    height: 100px;
-  }
-  .logo-container {
-    position: relative;
-    display: inline-block;
-  }
-  .logo {
-    height: 80px;
-  }
-  .logo-text {
-    position: absolute;
-    top: 30px;
-    margin-left: 200px; /* Space between icon and text */
-    font-size: 20px;
-    font-weight: bold;
-    font-family: 'Poppins' sans-serif;
-    color: black;
-  }
-  .icon {
-    position: relative;
-    width: 50px;
-    height: 50px;
-    left: 140px;
-    top: 15px;
-  }
-  .outer-border {
-    position:absolute;
-    width: 100%;
-    height: 100%;
-    clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
-    background-color: white;
-  }
-  .middle-border {
-    position: absolute;
-    width: 80%;
-    height: 80%;
-    top: 10%;
-    left: 10%;
-    clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
-    background-color: orangered;
-  }
-.center-shape {
+h1.z {
+  color: rgb(48, 40, 40);
+  position:absolute;
+  padding: 800px 700px;
+ }
+ p.r {
+   color: rgb(48, 41, 41);
+   position: absolute;
+   padding: 900px 200px;
+ }
+ img {
+  width: 80px;
+  filter:  brightness(1.2) hue-rotate(-20deg) saturate(1.5);
+  margin: 1020px 250px;
+ }
+ p.Ba {
+  color: rgb(48, 39, 39);
   position: absolute;
-  width: 50%;
-  height: 50%;
-  top: 15px;
-  left: 25%;
-  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
-  background-color: white;
-}
-/* Responsive Design for Mobile (max width 480px) */
-@media (max-width: 480px) {}
-  body {
-      width: 100%;
-      height: auto;
-      background-size: cover;
-  }
-nav ul {
-    position: absolute;
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    margin-right: 2oopx;
-    top: 5%;
-    padding: 2px 1000px;
-    flex-direction: row;
-  }
-  
-  nav  ul a {
-    text-decoration: none;
-    color: white;
-    position: absolute;
-  }
-  
-  /* Mobile navigation hidden by default */
-  .mobile-nav {
-    display: none;
-  }
-  
-  .hidden {
-    display: none;
-  }
-  
-  /* Hamburger button styles */
-  .hamburger {
-    font-size: 24px;
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
-  
-  /* Media query for mobile */
-  @media (max-width: 480px) {
-    .desktop-nav {
-      display: none;
-    }
-  
-    .mobile-nav {
-      display: block;
-    }
-  
-    #mobile-menu {
-      background: white;
-      position: absolute;
-      top: 100px;
-      left: 0;
-      width: 100%;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-  
-    #mobile-menu ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-  
-    #mobile-menu li {
-      padding: 10px 20px;
-      border-bottom: 1px solid #ccc;
-    }
-  
-    #mobile-menu a {
-      text-decoration: none;
-      color: white;
-    }
-  }
- 
+  right: 38%;
+  top: 850px;
+  font-weight: bold;
+ }
+ p.Ca {
+  color: rgb(48, 36, 36);
+  position: absolute;
+  right: 36%;
+  top: 880px;
+ }
+ img.g {
+  width: 100px;
+  position: absolute;
+  right: 35%;
+  top: 65px;
+ }
+ p.f {
+  color: rgb(48, 34, 34);
+  position: absolute;
+  right: 18%;
+  top: 850px;
+  font-weight: bold;
+ }
+ p.t {
+  color: rgb(48, 32, 32);
+  position: absolute;
+  right: 16%;
+  top: 880px;
+ }
+ p.l {
+  color:rgb(48, 40, 40);
+  position: absolute;
+  right: 1%;
+  top: 850px;
+  font-weight: bold;
+ }
+ img.w  {
+  position: absolute;
+  right: 20%;
+  top: 90px
+ }
+ p.la {
+  color: rgb(49, 35, 35);
+  position: absolute;
+  right: 0%;
+  top: 880px
+ }
+ img.wa {
+  position:absolute;
+  right: 4%;
+  top: 90px;
+ }
+ p.s {
+  color: rgb(48, 37, 37);
+  position:absolute;
+  margin-left: 34%;
+  top: 850px;
+  font-weight: bold;
+ }
+ p.h {
+  color: rgb(48, 33, 33);
+  position: absolute;
+  margin-left: 32%;
+  margin-top: 820px;
+ }
