--- a/headphones/2-styles.css
+++ b/headphones/2-styles.css
@@ -1,74 +1,97 @@
-nav ul {
+div.v {
+    background-image: url(second\ background.jpg);
+    height: 800px;
+    width: 1400px;
+    margin-top: -800px;
+}
+h1.ss {
+    color:white;
     position: absolute;
-    list-style: none;
-    display: flex;
-    gap: 90px;
-    margin-right: 2oopx;
-    top: 5%;
-    padding: 2px 1000px;
-    flex-direction: row;
-  }
-  
-  nav  ul a {
-    text-decoration: none;
+    padding: 1500px 840px;
+    text-align: center;
+}
+p.m {
     color: white;
     position: absolute;
-  }
-  
-  /* Mobile navigation hidden by default */
-  .mobile-nav {
-    display: none;
-  }
-  
-  .hidden {
-    display: none;
-  }
-  
-  /* Hamburger button styles */
-  .hamburger {
-    font-size: 24px;
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
-  
-  /* Media query for mobile */
-  @media (max-width: 480px) {
-    .desktop-nav {
-      display: none;
-    }
-  
-    .mobile-nav {
-      display: block;
-    }
-  
-    #mobile-menu {
-      background: white;
-      position: absolute;
-      top: 100px;
-      left: 0;
-      width: 100%;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-  
-    #mobile-menu ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-  
-    #mobile-menu li {
-      padding: 10px 20px;
-      border-bottom: 1px solid #ccc;
-    }
-  
-    #mobile-menu a {
-      text-decoration: none;
-      color: white;
-    }
-  }
- nav ul a.A {
-    text-decoration: none;
+    padding:1560px 400px;
+}
+.polygon {
+    position:absolute;
+    width: 12%;
+    height: 22%;
+    clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+    background-color: orangered;
+    margin-top: -400px;
+    margin-left: 200px;
+}
+p.k {
     color: white;
     position: absolute;
+    padding:1770px 240px;
+    font-size: 40px;
+}
+p.x {
+    color:white;
+    position: absolute;
+    padding: 1830px 240px;
+}
+.polygon-1 {
+    position:absolute;
+    width: 12%;
+    height: 22%;
+    clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+    background-color: orangered;
+    margin-top: -400px;
+    margin-left: 450px;
+}
+p.p {
+    color: white;
+    position: absolute;
+    padding:1770px 490px;
+    font-size: 40px;
+}
+p.n {
+    color:white;
+    position: absolute;
+    padding: 1830px 490px;
+}
+.polygon-2 {
+    position:absolute;
+    width: 12%;
+    height: 22%;
+    clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+    background-color: orangered;
+    margin-top: -400px;
+    margin-left: 700px;
+}
+p.pa {
+    color: white;
+    position: absolute;
+    padding:1770px 740px;
+    font-size: 40px;
+}
+p.na {
+    color:white;
+    position: absolute;
+    padding: 1830px 740px;
+}
+.polygon-3 {
+    position:absolute;
+    width: 12%;
+    height: 22%;
+    clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+    background-color: orangered;
+    margin-top: -400px;
+    margin-left: 950px;
+}
+p.ra {
+    color: white;
+    position: absolute;
+    padding:1770px 990px;
+    font-size: 40px;
+}
+p.fa {
+    color:white;
+    position: absolute;
+    padding: 1830px 990px;
 }
